Added path to Podfile to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: objective-c
 osx_image: xcode6.4
 xcode_project: test/SdkTests/SdkTests.xcodeproj
 xcode_scheme: test/SdkTests/SdkTestsTests
+podfile: test/Podfile
 script: pod install
